--- a/BITCodeChallenge/MainWindow.xaml
+++ b/BITCodeChallenge/MainWindow.xaml
@@ -5,23 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="MainWindow" Height="423" Width="656" SizeToContent="WidthAndHeight">
+        Title="MainWindow" Height="280" Width="656" SizeToContent="WidthAndHeight" >
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="10"/>
+            <ColumnDefinition MinWidth="10" Width="auto"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition MaxWidth="500"/>
             <ColumnDefinition Width="auto" MaxWidth="40"/>
             <ColumnDefinition Width="auto" MaxWidth="400"/>
-            <ColumnDefinition Width="10"/>
+            <ColumnDefinition MinWidth="10" Width="auto"/>
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="10"/>
+            <RowDefinition MinHeight="10" Height="auto"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="10"/>
+            <RowDefinition MinHeight="10" Height="auto"/>
         </Grid.RowDefinitions>
 
         <!-- GridRow 1 -->
